--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5"
   }
 }
