--- a/package.json
+++ b/package.json
@@ -46,7 +46,12 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
-    "@types/redux": "^3.6.0",
-    "@types/redux-saga": "^0.10.5"
+    "@types/redux-saga": "^0.10.5",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint": "^7.12.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0"
   }
 }
