--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends":"standard-with-typescript",
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules":{
+    "@typescript-eslint/explicit-function-return-type":"off",
+    "@typescript-eslint/no-unused-vars":"off"
   }
 }
