--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "rules":{
     "@typescript-eslint/explicit-function-return-type":"off",
-    "@typescript-eslint/no-unused-vars":"off"
+    "@typescript-eslint/no-unused-vars":"off",
+    "generator-star-spacing":"off"
   }
 }
