--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
+    "@types/redux-persist": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "eslint": "^7.12.1",
